[package]
name = "capivara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="cavio"
path="src/lib/lib.rs"

[[bin]]
name="capivara-server"
path="src/bin/server/bin.rs"

[dependencies]
winapi = { version = "0.3.9", features = ["std", "impl-default", "windef", "winuser"] }
bincode = "^2.0.0-rc.2"